<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.example.ecs193.prostatecancercare.Menu">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputdata"
        android:id="@+id/inputdataButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visualizedata"
        android:id="@+id/visualizedataButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/inputdataButton"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editAppointment"
        android:id="@+id/editAppointmentsButton"
        android:layout_marginTop="25dp"
        android:layout_below="@id/visualizedataButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:id="@+id/feedbackButton"
        android:layout_marginTop="25dp"
        android:layout_below="@id/editAppointmentsButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq"
        android:id="@+id/faqButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/feedbackButton"
        android:layout_alignRight="@+id/feedbackButton"
        android:layout_alignEnd="@+id/feedbackButton" />
</RelativeLayout>
