<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add a scheduled appointment"
        android:id="@+id/add_appointment_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appointment_types_radio_group"
        android:layout_below="@+id/add_appointment_text"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psa"
            android:id="@+id/PSARadioButton"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qol"
            android:id="@+id/QQLRadioButton"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biopsy"
            android:id="@+id/BIOPSYRadioButton"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gene"
            android:id="@+id/GENERadioButton"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mri"
            android:id="@+id/MRIRadioButton"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genomics"
            android:id="@+id/GENOMICSRadioButton"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADD APPOINTMENT"
        android:id="@+id/submit_appointment_button"
        android:layout_alignParentBottom="true"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/datePicker"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/submit_appointment_button"
        android:layout_below="@+id/appointment_types_radio_group" />

</RelativeLayout>