<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.example.ecs193.prostatecancercare.InputData">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psa"
        android:id="@+id/psaButton"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qol"
        android:id="@+id/qqlButton"
        android:layout_below="@+id/psaButton"
        android:layout_alignLeft="@+id/psaButton"
        android:layout_alignStart="@+id/psaButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biopsy"
        android:id="@+id/biopsyButton"
        android:layout_below="@+id/qqlButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gene"
        android:id="@+id/geneButton"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/biopsyButton"
        android:layout_alignLeft="@+id/biopsyButton"
        android:layout_alignStart="@+id/biopsyButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mri"
        android:id="@+id/mriButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/geneButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="remove"
        android:id="@+id/removeButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View"
        android:id="@+id/viewButton"
        android:layout_above="@+id/removeButton"
        android:layout_alignLeft="@+id/removeButton"
        android:layout_alignStart="@+id/removeButton" />

</RelativeLayout>
