<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputPsa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.example.ecs193.prostatecancercare.InputPsa"
    android:weightSum="1">

    <Button
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:id="@+id/dateButton"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.19" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/psalevel"
        android:id="@+id/psalevelText"
        android:layout_marginTop="60dp" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/psaEdit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/psadensity"
        android:id="@+id/psadesnityText"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/densityEdit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prostatevolume"
        android:id="@+id/prostatevolumeText"
        android:layout_marginTop="38dp" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/volumeEdit" />

    <Button
        style="?android:attr/buttonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:paddingTop="15dp"
        android:id="@+id/doneButton"
        android:layout_gravity="right" />

</LinearLayout>